hphp/hack/test/typecheck/static_property_declaration_with_attribute_missing_visibility_modifier.php
<?hh
class C {
  <<__LSB>>
  static int $x = 42;
}
